kubernetes/apps/n8n/n8n/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  hostnames:
    - n8n.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: n8n
          namespace: n8n
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
